force-app/main/default/objects/AR_Obj1__c/AR_Obj1__c.object-meta.xml
<CustomObject>
    <description>Add Comment for this  ARObj1 test</description>
    <label>AR-Obj1</label>
    <nameField>
        <label>AR-Obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR-Obj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>