force-app/main/default/objects/AR_Obj1__c/fields/AR_SField1__c.field-meta.xml
<CustomField>
    <fullName>AR_SField1__c</fullName>
    <description>Add Description1</description>
    <label>AR-SField1</label>
    <type>Phone</type>
</CustomField>