force-app/main/default/objects/AR_Obj1__c/fields/AR_SField2__c.field-meta.xml
<CustomField>
    <fullName>AR_SField2__c</fullName>
    <description>Add Description2</description>
    <label>AR-SField2</label>
    <type>Email</type>
</CustomField>