force-app/main/default/objects/AR_Obj1__c/fields/AR_SField3__c.field-meta.xml
<CustomField>
    <fullName>AR_SField3__c</fullName>
    <label>AR-SField3</label>
    <type>Email</type>
</CustomField>