force-app/main/default/objects/AR_Obj1__c/fields/F2__c.field-meta.xml
<CustomField>
    <fullName>F2__c</fullName>
    <label>F2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>