force-app/main/default/objects/AR_Obj1__c/fields/Pl2__c.field-meta.xml
<CustomField>
    <fullName>Pl2__c</fullName>
    <label>Pl2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>