force-app/main/default/objects/AR_Obj1__c/validationRules/ARpValidationRule4.validationRule-meta.xml
<ValidationRule>
    <fullName>ARpValidationRule4</fullName>
    <active>true</active>
    <description>Add comment</description>
    <errorConditionFormula>ISBLANK( AR_SField4__c )</errorConditionFormula>
    <errorMessage>PLease enter avalue</errorMessage>
</ValidationRule>