force-app/main/default/objects/AR_Obj1__c/validationRules/ARSValidationRule3.validationRule-meta.xml
<ValidationRule>
    <fullName>ARSValidationRule3</fullName>
    <active>true</active>
    <description>Add comment for this  ARSValidationRule3</description>
    <errorConditionFormula>ISBLANK( AR_SField3__c )</errorConditionFormula>
    <errorDisplayField>AR_SField3__c</errorDisplayField>
    <errorMessage>Please enter avalue</errorMessage>
</ValidationRule>